fix align web user icon in lite theme

--- a/assets/plugins/dashboardstats/lite.css
+++ b/assets/plugins/dashboardstats/lite.css
@@ -14,11 +14,11 @@ width: 30px;
     text-align: center;
     font-size: 12px;
     line-height: 1.428571429;}
-.staticon i{display:block; padding: 10px;border-radius: 25px; width: 40px; height:40px; font-size: 20px; color: #FFFFFF!important; }
+.staticon i{display:inline-block; padding: 10px;border-radius: 25px; width: 40px; height:40px; font-size: 20px; color: #FFFFFF!important; }
 .count{float:left; text-align:left; padding:0; margin: 5px 0 0 25px;}
-.count h3{font-size:28px; font-weight: bold; margin: 0px 0 -4px 0px; padding:0px;}
+.count h3{font-size:28px; font-weight: bold; margin: 0 0 -4px 0; padding:0;}
 
 .sred .staticon i{background-color:  #d9534f;}
 .syellow .staticon i{background-color: #f0ad4e;}
-.sgreen .staticon i{background-color: #5cb85c;}
+.sgreen .staticon i{background-color: #5cb85c; padding-left: 7px;}
 .sblue .staticon i{background-color: #428bca;}
